; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/mediatek/extr_mtk-pmic-wrap.c_pwrap_is_fsm_vldclr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/mediatek/extr_mtk-pmic-wrap.c_pwrap_is_fsm_vldclr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmic_wrapper = type { i32 }

@PWRAP_WACS2_RDATA = common dso_local global i32 0, align 4
@PWRAP_WACS_FSM_WFVLDCLR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pmic_wrapper*)* @pwrap_is_fsm_vldclr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pwrap_is_fsm_vldclr(%struct.pmic_wrapper* %0) #0 {
  %2 = alloca %struct.pmic_wrapper*, align 8
  %3 = alloca i32, align 4
  store %struct.pmic_wrapper* %0, %struct.pmic_wrapper** %2, align 8
  %4 = load %struct.pmic_wrapper*, %struct.pmic_wrapper** %2, align 8
  %5 = load i32, i32* @PWRAP_WACS2_RDATA, align 4
  %6 = call i32 @pwrap_readl(%struct.pmic_wrapper* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @PWRAP_GET_WACS_FSM(i32 %7)
  %9 = load i64, i64* @PWRAP_WACS_FSM_WFVLDCLR, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  ret i32 %11
}

declare dso_local i32 @pwrap_readl(%struct.pmic_wrapper*, i32) #1

declare dso_local i64 @PWRAP_GET_WACS_FSM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
